--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -1944,6 +1944,19 @@
                                         <TextBlock
                                             Text="# 开启该选项后，长按PPT翻页按钮可以连续翻页，提高翻页效率。"
                                             TextWrapping="Wrap" Foreground="#a1a1aa" />
+                                        <ui:SimpleStackPanel Orientation="Horizontal"
+                                                             HorizontalAlignment="Left" Margin="0,6,0,0">
+                                            <TextBlock Foreground="#fafafa" Text="点击翻页时跳过当前页动画，直接切到下一张"
+                                                       VerticalAlignment="Center" FontSize="14" Margin="0,0,16,0" />
+                                            <ui:ToggleSwitch OnContent="" OffContent=""
+                                                             Name="ToggleSwitchSkipAnimationsWhenGoNext"
+                                                             IsOn="False"
+                                                             FontFamily="Microsoft YaHei UI" FontWeight="Bold"
+                                                             Toggled="ToggleSwitchSkipAnimationsWhenGoNext_OnToggled" />
+                                        </ui:SimpleStackPanel>
+                                        <TextBlock
+                                            Text="# 开启该选项后，点击“下一页”按钮时如果仍停留在同一页，会强制直接切到下一张幻灯片，从而跳过该页的动画。"
+                                            TextWrapping="Wrap" Foreground="#a1a1aa" />
                                     </ui:SimpleStackPanel>
                                     <Line HorizontalAlignment="Center" X1="0" Y1="0" X2="400" Y2="0" Stroke="#3f3f46"
                                           StrokeThickness="1" Margin="0,4,0,4" />
