--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -3958,7 +3958,12 @@
                        MouseUp="inkCanvas_MouseUp"
                        ManipulationStarting="inkCanvas_ManipulationStarting"
                        SelectionChanged="inkCanvas_SelectionChanged"
-                       StrokeCollected="inkCanvas_StrokeCollected" ClipToBounds="False" Background="Transparent" />
+                       StrokeCollected="inkCanvas_StrokeCollected" 
+                       ClipToBounds="False" 
+                       Background="Transparent"
+                       RenderOptions.BitmapScalingMode="LowQuality"
+                       RenderOptions.EdgeMode="Aliased"
+                       RenderOptions.CachingHint="Cache" />
             
             <Canvas x:Name="EraserOverlayCanvas" 
                     Background="Transparent" 
