--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -3573,7 +3573,7 @@
                                                          Toggled="ToggleSwitchDisplayRandWindowNamesInputBtn_OnToggled" />
                                     </ui:SimpleStackPanel>
                                     
-                                    <TextBlock Foreground="#fafafa" Text="点名窗口背景设置" 
+                                    <TextBlock Foreground="#fafafa" Text="点名窗口背景设置(仅老版点名UI有效)" 
                                                FontSize="16" FontWeight="Bold" Margin="0,10,0,5" />
                                     
                                     <ui:SimpleStackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,5,0,0">
