--- a/Ink Canvas/Windows/SettingsViews/SettingsWindow.xaml
+++ b/Ink Canvas/Windows/SettingsViews/SettingsWindow.xaml
@@ -622,6 +622,11 @@
                     <settingsViews:AdvancedPanel x:Name="AdvancedPanel"/>
                 </Grid>
 
+                <!--SearchPanel-->
+                <Grid Margin="0,0,0,0" Visibility="Collapsed" Name="SearchPane" ZIndex="1000">
+                    <settingsViews:SearchPanel x:Name="SearchPanelControl"/>
+                </Grid>
+                
                 <!--Topbar-->
                 <Grid Height="48" VerticalAlignment="Top" Margin="250,0,0,0">
                     <Border Height="48" CornerRadius="0,6,0,0" Background="#fafafa">
